tests/struct/duplicate_field.rev
struct Foo {
    a
    a // error: a field with this name already exists in this structure
}
